<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3fff"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:background="@drawable/circle"
            android:gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/input_username"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="#FFFBF6"
            android:background="@drawable/custombutton"
            />
        <EditText
            android:id="@+id/input_password"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#FFFBF6"
            android:background="@drawable/custombutton"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep"
            android:textColor="#FFFBF6"
            android:hint="@string/keep"
            android:layout_marginTop="15dp"
            android:buttonTint="#FFFBF6"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton2"
            android:textColor="@color/white"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/register_btn"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="@string/signup"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/custombutton2"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
